bullet_ws/log/build_2025-10-16_12-53-08/sim/stderr.log
  File "/home/arepo/vsss_sim/bullet_ws/install/sim/lib/python3.10/site-packages/sim/vision.py", line 183
    cv2.imshow(f"ROI {best[1]} {i["color"]}", i["mask"])
                                   ^^^^^
SyntaxError: f-string: unmatched '['

